unpackaged/objects/redwing__Response_Summary__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Response Summaries</relationshipLabel>
        <relationshipName>Response_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Shared_Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Learning Assignment</label>
        <referenceTo>redwing__Shared_Learning_Assignment__c</referenceTo>
        <relationshipLabel>Response Summaries</relationshipLabel>
        <relationshipName>Response_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Summary__c</fullName>
        <label>Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Response_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Response Summary</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__User__c</columns>
        <columns>redwing__Learning_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RSUM-{0000000}</displayFormat>
        <label>Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>